[package]
name = "worqen-escrow"
version = "1.1.0"
description = "Worqen Escrow — trustless on-chain payment escrow for the Worqen job marketplace (Solana / Anchor 0.32)"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Worqen-Labs/Worqen-Solana"
homepage = "https://worqen.com"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "worqen_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
default = []
# Selects the mainnet program id in declare_id! (src/lib.rs). Enabled only by
# release.yml's verifiable build; absent for devnet/localnet/tests/CI.
mainnet = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "associated_token"] }
solana-security-txt = "1.1.1"

# Declare the cfgs emitted by the Anchor + Solana toolchain so `cargo check`,
# `clippy`, and CI stay warning-clean without CLI `-A` flags.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))',
] }
